--- a/custom/receiver.30.04.20.css
+++ b/custom/receiver.30.04.20.css
@@ -5,14 +5,14 @@ cast-media-player {
   --progress-color: rgb(192, 192 , 192);
   /*--splash-image: url('./orange_logo.png');*/
   --splash-size: auto;
-  --slideshow-image-1: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/ATLANTICAS_HEADING_640x360(1).jpg')";
-  --slideshow-image-2: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/SHUT%20EYE_HEADING_640x360(2).jpg')";
-  --slideshow-image-3: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/GOLDBERG_HEADING_640x360.jpg')";
-  --slideshow-image-4: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/KEVIN%20CAN%20WAIT_HEADING_640x360.jpg')";
-  --slideshow-image-5: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/BREAKING_HEADING_640x360(3).jpg')";
-  --slideshow-image-6: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/CHOSEN_HEADING_640x360.jpg')";
-  --slideshow-image-7: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/CLEANERS_HEADING_640x360.jpg')";
-  --slideshow-image-8: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/COMUNITY_HEADING_640x360(1).jpg')";
-  --slideshow-image-9: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/DAMAGES__HEADING_640x360.jpg')";
-  --slideshow-image-10: "url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/DAWSON_HEADING_640x360.jpg')";
+  --slideshow-image-1: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/ATLANTICAS_HEADING_640x360(1).jpg');
+  --slideshow-image-2: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/SHUT%20EYE_HEADING_640x360(2).jpg');
+  --slideshow-image-3: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/GOLDBERG_HEADING_640x360.jpg');
+  --slideshow-image-4: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/KEVIN%20CAN%20WAIT_HEADING_640x360.jpg');
+  --slideshow-image-5: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/BREAKING_HEADING_640x360(3).jpg');
+  --slideshow-image-6: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/CHOSEN_HEADING_640x360.jpg');
+  --slideshow-image-7: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/CLEANERS_HEADING_640x360.jpg');
+  --slideshow-image-8: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/COMUNITY_HEADING_640x360(1).jpg');
+  --slideshow-image-9: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/DAMAGES__HEADING_640x360.jpg');
+  --slideshow-image-10: url('https://orangetv.orange.es/mob/api/rtv/v1/images/attachments/DAWSON_HEADING_640x360.jpg');
 }
