--- a/custom/dev/receiver1.29.05.20.css
+++ b/custom/dev/receiver1.29.05.20.css
@@ -15,8 +15,8 @@ cast-media-player {
   z-index: 9999; 
   position: absolute; 
   float: left; 
-  background-color: black; 
-  color: white; 
+  /*background-color: black; 
+  color: white; */
   margin-left: 5%; 
   margin-top: 5%; 
   font-size: 20px;
